Cloud-1957 steel thread cleanup
